# FastLoader

./: .gitignore  CMakeLists.txt  FastLoaderConfig.cmake.in  LICENSE.txt  README.md  Readme.md  main.cc  main.cpp
cmake_modules/: FindFastLoader.cmake  FindHedgehog.cmake
doxygen/: fastloader.cfg
fast_loader/: fast_loader.h
fast_loader/api/: abstract_adaptive_tile_loader.h  abstract_border_creator.h  abstract_tile_loader.h  abstract_traversal.h  adaptive_fast_loader_graph.h  default_view.h  fast_loader_configuration.h  fast_loader_graph.h  index_request.h  unified_view.h
fast_loader/api/data/: data_type.h  index_request.h
fast_loader/api/graph/: abstract_tile_loader.h  fast_loader_configuration.h  fast_loader_graph.h
fast_loader/api/graph/adaptive/: adaptive_fast_loader_graph.h
fast_loader/api/graph/options/: abstract_border_creator.h  abstract_traversal.h
fast_loader/api/view/: default_view.h  unified_view.h
fast_loader/core/: cache.h  fast_loader_execution_pipeline.h  fast_loader_memory_manager.h
fast_loader/core/border_creator/: constant_border_creator.h  default_border_creator.h
fast_loader/core/data/: adaptive_tile_request.h  cached_tile.h  copy_volume.h  tile_request.h
fast_loader/core/data/view/: abstract_view.h  adaptive_view.h
fast_loader/core/data/view_data/: abstract_view_data.h  adaptive_view_data.h  default_view_data.h  unified_view_data.h
fast_loader/core/state/: direct_to_copy_state.h  tile_loader_counter_state.h  to_tile_loader_state.h
fast_loader/core/task/: copy_logical_tile_to_view.h  copy_physical_to_view.h  mapper_logical_physical.h  view_counter.h  view_loader.h  view_waiter.h
fast_loader/core/traversal/: naive_traversal.h
fast_loader/internal/: cache.h  data_type.h  traits.h
fast_loader/internal/border_creator/: constant_border_creator.h  reflect_101_border_creator.h  reflect_border_creator.h  replicate_border_creator.h  wrap_border_creator.h
fast_loader/internal/data/: adaptive_tile_request.h  cached_tile.h  tile_request.h
fast_loader/internal/data/view/: abstract_view.h  adaptive_view.h
fast_loader/internal/data/view_data/: abstract_view_data.h  adaptive_view_data.h  default_view_data.h  unified_view_data.h
fast_loader/internal/data/volume/: copy_volume.h  volume.h
fast_loader/internal/graph/: fast_loader_execution_pipeline.h
fast_loader/internal/graph/memory_manager/: fast_loader_memory_manager.h
fast_loader/internal/graph/states/: direct_to_copy_state.h  tile_loader_counter_state.h  to_tile_loader_state.h
fast_loader/internal/graph/tasks/: copy_logical_tile_to_view.h  mapper_logical_physical.h  view_counter.h  view_loader.h  view_waiter.h
fast_loader/internal/traversal/: block_recursive_traversal.h  diagonal_traversal.h  hilbert_traversal.h  naive_traversal.h  snake_traversal.h  spiral_traversal.h
fast_loader/specialised_tile_loader/: grayscale_tiff_strip_loader.h  grayscale_tiff_tile_loader.h
fast_loader/tools/: traits.h
inputs_cmake/: version.h.in
tests/: CMakeLists.txt  testAll.cc  test_adaptive.h  test_adaptive_tile_loader.h  test_cache.h  test_channels.h  test_fast_loader.cc  test_filling.h  test_radius.h  test_requests.h  test_tile_loader.h
tests/tile_loaders/: virtual_file_adaptive_tile_channel_loader.h  virtual_file_adaptive_tile_loader.h  virtual_file_tile_channel_loader.h  virtual_file_tile_loader.h
